# CloudPoint

./: .gitignore  README.md
MeasureCmakeCAD/: BaseBrowseDir.cpp  BaseBrowseDir.h  BasicGeometryConvertion.cxx  BasicGeometryConvertion.h  CMakeLists.txt  EdgeConvertion.cxx  EdgeConvertion.h  EdgeFromSurface.cpp  EdgeFromSurface.h  Entity.cpp  Entity.h  IGESToVTKConvertion.cxx  IGESToVTKConvertion.h  IgesAndVtkModel.cpp  IgesAndVtkModel.h  MainFrm.cpp  MainFrm.h  MeasureWithBasicGeometry.cpp  MeasureWithBasicGeometry.h  MeasureWithEdge.cpp  MeasureWithEdge.h  MeasureWithSurface.cpp  MeasureWithSurface.h  MeasurementDialog.cpp  MeasurementDialog.h  MyCameraDlg.cpp  MyCameraDlg.h  OutPutDlg.cpp  OutPutDlg.h  PartProcess.cpp  PartProcess.h  PartTreeView.cpp  PartTreeView.h  PhysicalFileBrowseDir.cpp  PhysicalFileBrowseDir.h  PointCloudMeasure.aps  PointCloudMeasure.cpp  PointCloudMeasure.h  PointCloudMeasure.rc  PointCloudMeasureDoc.cpp  (+43 more)
MeasureCmakeCAD/Debug/: PointCloudMeasure.exp
MeasureCmakeCAD/RansacLib/: RansacShapeDetector.cpp  RansacShapeDetector.h  UpgradeLog.XML
MeasureCmakeCAD/res/: PointCloudMeasure.rc2
data/: a_rrow_noise.sp
inc/: CoolDialogBar.h  DockTool.h
model/: suntou.sp  suntouTest.sp  suntouTest.stl  yxzhc-jietou1-1m_1.igs  yxzhc-jietou1-1m_1.stl
model/key/: 11-danlizhu_1.igs  11-danlizhu_1_cpy_1.igs  12-danlizhu_1.igs  13-danlizhu_1.igs  13-danlizhu_1_cpy_1.igs  14-danlizhu_1.igs  _x2_96f64ef651e04f554f53_x0__5.igs  dzc-dingban-diaodianmaijian-you.igs  dzc-dingban-diaodianmaijian-you_cpy_1.igs  dzc-dingban-diaodianmaijian-zuo.igs  fdgfdg_1.igs  (+58 more)
(+4 files in other folders)
